--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBm8eT1_bYvNdviQ4ijkbZNPGuvAKoS_R4"></script>
   </head>
   <body>
     <noscript>
@@ -36,6 +38,5 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBm8eT1_bYvNdviQ4ijkbZNPGuvAKoS_R4"></script>
   </body>
 </html>
